[gd_scene load_steps=11 format=2]

[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_L_on.png" type="Texture" id=1]
[ext_resource path="res://fonts/norwester.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/GUI/HUD_pauseMenu.gd" type="Script" id=3]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_L_off.png" type="Texture" id=4]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_L_pressed.png" type="Texture" id=5]
[ext_resource path="res://res/GUI_set_0/imgs/icon_cross.png" type="Texture" id=6]
[ext_resource path="res://res/GUI_set_0/imgs/buttons/btn_S_on.png" type="Texture" id=7]
[ext_resource path="res://res/GUI_set_0/imgs/board&bar/board_1.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="HUD_node_pauseMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 604.0
color = Color( 0, 0, 0, 0.196078 )

[node name="item_info_rect" type="NinePatchRect" parent="."]
margin_left = 375.919
margin_top = 97.5406
margin_right = 443.919
margin_bottom = 183.541
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 8 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_filter_0" type="TextureButton" parent="item_info_rect"]
margin_left = 14.0488
margin_top = 11.2892
margin_right = 209.049
margin_bottom = 63.2892
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 2 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="item_info_rect/btn_filter_0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -17.0
margin_right = 57.5
margin_bottom = 9.0
text = "Music Off"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_filter_1" type="TextureButton" parent="item_info_rect"]
margin_left = 14.0488
margin_top = 46.9441
margin_right = 209.049
margin_bottom = 98.9441
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 2 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="item_info_rect/btn_filter_1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -17.0
margin_right = 57.5
margin_bottom = 9.0
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_filter_2" type="TextureButton" parent="item_info_rect"]
margin_left = 14.0488
margin_top = 62.3158
margin_right = 209.049
margin_bottom = 114.316
rect_scale = Vector2( 0.2, 0.2 )
theme = SubResource( 2 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="item_info_rect/btn_filter_2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -17.0
margin_right = 57.5
margin_bottom = 9.0
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_close" type="TextureButton" parent="."]
margin_left = 664.0
margin_top = 80.0
margin_right = 728.0
margin_bottom = 144.0
action_mode = 0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="btn_close"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="item_info_rect/btn_filter_0" to="." method="_on_btn_music_pressed"]
[connection signal="pressed" from="item_info_rect/btn_filter_1" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="item_info_rect/btn_filter_2" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="btn_close" to="." method="_on_btn_close_pressed"]
